# POCOExercise

./: CMakeLists.txt  README.md
.github/workflows/: hosted-ninja-vcpkg_submod.yml
src/example1_client/: CMakeLists.txt
src/example1_server/: CMakeLists.txt
src/example2_client/: CMakeLists.txt  main.cpp
src/example2_server/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
